--- a/introduction.tex
+++ b/introduction.tex
@@ -22,9 +22,9 @@ However, as we saw with DNA replication, a single protein is often required to f
 
 In recent years, it has been recognized that functional plasticity  can be found in regions of proteins that  do not adopt stable architectures, also known as intrinsically disordered regions (IDRs). While IDRs are highly flexible and largely unstructured, functional studies have shown that they are necessary for many cellular processes ~\cite{wright2015intrinsically}.  \footnote{Some works make the distinction between IDP and IDR where an IDR is an intrinsically disordered region and IDP is a fully disordered protein.} Instead of relying on a structure for function, IDR functionality lies the absence of structure. This flexibility offers the protein rapid access to a vast pool of conformations with which to fine-tune and diversify its function.  
 
-The study of IDRs is relatively new to structural biology. This is largely due to the fact that the main tool being used for structural biology in the past decades, X-ray crystallography, fails to detect patterns in unfolded chains, making it difficult to study highly dynamic elements in protein such as IDRs. Unstable protein domains such as IDRs that sample many conformations produce averaged out electron scatter patterns that cannot be interpreted ~\cite{putnam2007x}. Techniques that  do produce information  on dynamics,  such as Nuclear Magnetic Resonance (NMR) only developed for proteins  until 1984 ~\cite{wuthrich2001way}, 25 years after the first structure was solved by X-ray crystallography  in 1958 ~\cite{kendrew1958three}.  Another approach for studying protein dynamics with atomic resolution is through computational simulation.  Physical models of proteins whose motions are computed \silico have been shown to provide important information regarding detailed dynamics of biomolecules ~\cite{karplus2002molecular}. However, until recently, these techniques,such as Molecular Dynamics (MD), were greatly limited by shortcomings in computer power. However, with large advances  in experimental  and computational techniques  in recent years, we have been able to study the dynamic properties  of IDPs in great detail, and have found that  they play key roles in the control of molecular machines.
+The study of IDRs is relatively new to structural biology. This is largely due to the fact that the main tool being used for structural biology in the past decades, X-ray crystallography, fails to detect patterns in unfolded chains, making it difficult to study highly dynamic elements in protein such as IDRs. Unstable protein domains such as IDRs that sample many conformations produce averaged out electron scatter patterns that cannot be interpreted ~\cite{putnam2007x}. Techniques that  do produce information  on dynamics,  such as Nuclear Magnetic Resonance (NMR) only developed for proteins  until 1984 ~\cite{wuthrich2001way}, 25 years after the first structure was solved by X-ray crystallography  in 1958 ~\cite{kendrew1958three}.  Another approach for studying protein dynamics with atomic resolution is through computational simulation.  Physical models of proteins whose motions are computed \silico have been shown to provide important information regarding detailed dynamics of biomolecules ~\cite{karplus2002molecular}. However, until recently, these techniques, such as Molecular Dynamics (MD), were greatly limited by shortcomings in computer power. However, with large advances  in experimental  and computational techniques  in recent years, we have been able to study the dynamic properties  of IDPs in great detail, and have found that  they play key roles in the control of molecular machines.
 
-Over 15,000 proteins in the Protein Data Bank have been predicted to contain long disordered regions ~\cite{romero1998thousands}; it is therefore not surprising that  IDPs have also been implicated  in a multitude of cellular processes and disease states ~\cite{uversky2008intrinsically}.  Interestingly, it has been shown that viral proteins use IDPs in their proteins to hijack cellular proteins and use the flexibility of IDPs to mimic host proteins and recruit host cellular machinery in order to propagate.\cite{davey2011viruses} This would suggest that viral proteins use IDPs to make efficient use of their smaller genomes and obtain a greater range of function from the limited number of proteins in their genomes. It is now clear that IDPs, through their lack of structure, are an important adaptive feature that drive the functional complexity and robustness we observe in molecular machines. \\
+Over 15,000 proteins in the Protein Data Bank have been predicted to contain long disordered regions ~\cite{romero1998thousands}; it is therefore not surprising that  IDPs have also been implicated  in a multitude of cellular processes and disease states ~\cite{uversky2008intrinsically}.  Interestingly, it has been shown that viral proteins use IDPs in their proteins to hijack cellular proteins and use the flexibility of IDPs to mimic host proteins and recruit host cellular machinery in order to propagate \cite{davey2011viruses}. This would suggest that viral proteins use IDPs to make efficient use of their smaller genomes and obtain a greater range of function from the limited number of proteins in their genomes. It is now clear that IDPs, through their lack of structure, are an important adaptive feature that drive the functional complexity and robustness we observe in molecular machines. \\
 
 \section{Physical mechanisms of IDR function in cellular machines}
 
@@ -36,14 +36,13 @@ A key aspect of dynamic control is the ability to modulate function in a precise
 
 {\it Disorder-Order transitions}
 
-\todo{clarify entropy-enthalpy}
 
-The best explored physical mechanism of IDP function is the fold-on binding paradigm ~\cite{wright2009linking}. In this case, IDPs in the free form are unstructured, and when they encounter their binding target, they undergo a folding transition (disorder to order) to form a stable complex. The lack of structure in the unbound state allows the the IDP/IDR the necessary flexibility to recognize multiple targets, and it allows binding to be inducible instead of constitutive. A well studied example of this kind of mechanism is the binding of the transcriptional activator protein CREB and its co-activator CBP ~\cite{gianni2012folding}. An IDR in CREB known as KID mediates binding to CBP where upon binding, the IDP folds into a pair of helices. However, this binding process is not favoured spontaneously due to a high entropic barrier. \footnote{Protein folding is an ordering of the protein backbone which typically implies a loss of entropy to the system and is therefore energetically disfavoursed, this is the entropic barrier; $\Delta G = \Delta H - T\Delta S$, where $\Delta H$ is the change in enthalpy, or heat energy available to the system, and $\Delta S$ is the entropy, or degree of disorder/conformational freedom available to the system. However, if the folding process releases sufficient heat ($\Delta H$), the loss in entropy is overcome and the folding reaction is energetically favoured; $\Delta G < 0$. The release in heat by the folding of the protein typically increases the entropy of the surrounding water molecules thus preserving the second law of thermodynamics.}However, when the KID is phosphorylated, the phosphoryl group interacts with CBP by forming hydrogen bonds which result in a negative enthalpic change that compensates for the loss of entropy and thus makes the folding reaction favourable. Because of the inducible nature of this interaction, CBP is able to also interact with other co-factors, which has been reported in the literature \cite{radhakrishnan1997solution}. This is an example of how even though the association state of the IDP is ordered, it is  the intrinsic disorder and entropy of the unbound state which is the key for controlling the interaction. \\
+The best explored physical mechanism of IDP function is the fold-on binding paradigm ~\cite{wright2009linking}. In this case, IDPs in the free form are unstructured, and when they encounter their binding target, they undergo a folding transition (disorder to order) to form a stable complex. The lack of structure in the unbound state allows the the IDP/IDR the necessary flexibility to recognize multiple targets, and it allows binding to be inducible instead of constitutive. A well studied example of this kind of mechanism is the binding of the transcriptional activator protein CREB and its co-activator CBP ~\cite{gianni2012folding}. An IDR in CREB known as KID mediates binding to CBP where upon binding, the IDP folds into a pair of helices. However, this binding process is not favoured spontaneously due to a high entropic barrier \footnote{Protein folding implies an ordering of the protein backbone which typically results in a loss of conformational entropy to the system and is therefore energetically disfavoured. This is known as the entropic barrier; $\Delta G = \Delta H - T\Delta S$, where $\Delta H$ is the change in enthalpy, or heat energy available to the system, and $\Delta S$ is the entropy, or degree of disorder/conformational freedom available to the system. However, if the folding process releases sufficient heat ($\Delta H$), the loss in entropy is overcome and the folding reaction is energetically favoured; $\Delta G < 0$. The release in heat by the folding of the protein typically increases the entropy of the surrounding water molecules thus preserving the second law of thermodynamics. It should also be noted that not all binding interactions are driven only by conformational entropy. Phenomena such as the hydrophobic effect can drive interactions through the entropic component of the solvent surrounding macrocmolecules. }.However, when the KID is phosphorylated, the phosphoryl group interacts with CBP by forming hydrogen bonds which result in a negative enthalpic change that compensates for the loss of entropy and thus makes the folding reaction favourable. Because of the inducible nature of this interaction, CBP is able to also interact with other co-factors, which has been reported in the literature \cite{radhakrishnan1997solution}. This is an example of how even though the association state of the IDP is ordered, it is  the intrinsic disorder and entropy of the unbound state which is the key for controlling the interaction. \\
 
 
 \pagebreak
 
-{\it \lq Fuzzy\rq interactions}
+{\it Fuzzy interactions}
 
 \par Disorder to order transitions are not necessary for IDPs to confer functionality. There are a growing number of examples where IDPs/IDRs are involved in functional interactions while remaining in a disordered state \cite{tompa2008fuzzy}. Such interactions have been labeled with the term \lq fuzzy\rq as they maintain a heterogenous conformational ensemble throughout their lifetimes. There exist various physical mechanisms by which fuzziness, or disorder, in binding interactions confers advantages to protein function. For example, binding interactions between an IDP/IDR and a target protein where the IDP/IDR is able to form alternate contacts with its binding target can help reduce the entropic cost of binding, as well as control the accessibility of different sites on the protein for modulating interactions with different targets \cite{graham2001tcf4, fontes2000structural}. IDPs/IDRs can also play a role in interactions without making direct contacts with the binding partner by acting as flexible linkers for folded domains \cite{bhattacharyya2006ste5}, or as \lq antennae\rq for \cite{sigalov2004homooligomerization} recruiting further interactiors and stabilizing the binding of folded domains through long range interactions \cite{zor2002roles, yu1994structural} 
 
