--- a/thesis_cgo.bib
+++ b/thesis_cgo.bib
@@ -789,3 +789,35 @@
   year={2004},
   publisher={ACS Publications}
 }
+
+@article{mittag2008dynamic,
+  title={Dynamic equilibrium engagement of a polyvalent ligand with a single-site receptor},
+  author={Mittag, Tanja and Orlicky, Stephen and Choy, Wing-Yiu and Tang, Xiaojing and Lin, Hong and Sicheri, Frank and Kay, Lewis E and Tyers, Mike and Forman-Kay, Julie D},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={105},
+  number={46},
+  pages={17772--17777},
+  year={2008},
+  publisher={National Acad Sciences}
+}
+
+@article{borg2007polyelectrostatic,
+  title={Polyelectrostatic interactions of disordered ligands suggest a physical basis for ultrasensitivity},
+  author={Borg, Mikael and Mittag, Tanja and Pawson, Tony and Tyers, Mike and Forman-Kay, Julie D and Chan, Hue Sun},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={104},
+  number={23},
+  pages={9650--9655},
+  year={2007},
+  publisher={National Acad Sciences}
+}
+
+@article{chen2015theoretical,
+  title={Theoretical perspectives on nonnative interactions and intrinsic disorder in protein folding and binding},
+  author={Chen, Tao and Song, Jianhui and Chan, Hue Sun},
+  journal={Current opinion in structural biology},
+  volume={30},
+  pages={32--42},
+  year={2015},
+  publisher={Elsevier}
+}
