--- a/thesis_cgo.tex
+++ b/thesis_cgo.tex
@@ -107,7 +107,7 @@
 %%         French Abstract                         %%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \SetAbstractFrName{\MakeUppercase{ABR\'{E}G\'{E}}}%
-\SetAbstractFrText{De r\'ecents progr\`es dans les m\'ethodologies exp\'erimentales et informatiques en biologie structurelle d\'emontrent que la fonction des prot\'eines ne d\'epend pas uniquement de leur architecture tridimensionnelle stable, mais aussi de lâ€™absence dâ€™une telle architecture. Les \'el\'ements d\'epourvus de structure, appel\'es prot\'eines ou r\'egions intrins\`equement d\'esordonn\'ees (PID, RID), peuvent explorer une vaste gamme de conformations et de fonctions. La cellule exploite cette flexibilit\'e en ciblant les RID avec des modifications post-traductionnelles (MPT) comme la phosphorylation. Lâ€™alt\'eration de l'\'echantillonage conformationnel des RID par les MPT est un outil pour le contr\^ole fonctionnel et lâ€™int\'egration des signaux cellulaires. Ce paradigme est essentiel pour assurer lâ€™ex\'ecution correcte des processus cellulaires qui impliquent un grand nombre de prot\'eines multitÃ¢ches devant agir de mani\`ere pr\'ecise et coordonn\'ee. Cependant, les m\'ecanismes physiques qui \'etablissent un lien entre les RID et les r\'esultats fonctionnels sont en grande partie inconnus.  Cette th\`ese pr\'esente une \'etude sur le r\^ole de la phosphorylation dans lâ€™assemblage et lâ€™organisation du fuseau mitotique, la machine mol\'eculaire qui effectue la s\'egr\'egation des chromosomes durant la division cellulaire. La phosphorylation de lâ€™acide amin\'e Tyrosine 11 (Y11) \`a son extr\'emit\'e carboxy-terminale (\gct) intrins\`equement d\'esordonn\'ee contr\^ole des aspects essentiels de lâ€™assemblage du fuseau mitotique. La mutation de cette tyrosine \`a un acide aspartique phosphomim\'etique \vivo (Y11D) provoque une sensibilit\'e \`a la temp\'erature et des d\'efauts dans lâ€™organisation des microtubules du fuseau mitotique. En utilisant des simulations informatiques de dynamique mol\'eculaire et la r\'esonance magn\'etique nucl\'eaire, nous montrons que les formes non-phosphomim\'etiques et phosphomim\'etiques du \gct balayent toutes deux principalement des conformations compactes et d\'esordonn\'ees, mais que la mutation Y11D entreprend des mouvements collectifs occasionnels vers une conformation mineure \'etendue, elle aussi d\'esordonn\'ee. Nous sugg\'erons que cette transition peut servir \`a contr\^oler la liaison avec les prot\'eines qui affectent la dynamique des microtubules. Il sâ€™agit de la premi\`ere observation dâ€™une transition organis\'ee dans un ensemble de structures d\'esordonn\'ees, un nouveau m\'ecanisme physique de contr\^ole ayant le potentiel de r\'eguler le fonctionnement cellulaire.}%
+\SetAbstractFrText{De r\'ecents progr\`es dans les m\'ethodologies exp\'erimentales et informatiques en biologie structurelle d\'emontrent que la fonction des prot\'eines ne d\'epend pas uniquement de leur architecture tridimensionnelle stable, mais aussi de l'€™absence d'€™une telle architecture. Les \'el\'ements d\'epourvus de structure, appel\'es prot\'eines ou r\'egions intrins\`equement d\'esordonn\'ees (PID, RID), peuvent explorer une vaste gamme de conformations et de fonctions. La cellule exploite cette flexibilit\'e en ciblant les RID avec des modifications post-traductionnelles (MPT) comme la phosphorylation. Lâ€™alt\'eration de l'\'echantillonage conformationnel des RID par les MPT est un outil pour le contr\^ole fonctionnel et lâ€™int\'egration des signaux cellulaires. Ce paradigme est essentiel pour assurer l'€™ex\'ecution correcte des processus cellulaires qui impliquent un grand nombre de prot\'eines multitÃ¢ches devant agir de mani\`ere pr\'ecise et coordonn\'ee. Cependant, les m\'ecanismes physiques qui \'etablissent un lien entre les RID et les r\'esultats fonctionnels sont en grande partie inconnus.  Cette th\`ese pr\'esente une \'etude sur le r\^ole de la phosphorylation dans l'€™assemblage et l'€™organisation du fuseau mitotique, la machine mol\'eculaire qui effectue la s\'egr\'egation des chromosomes durant la division cellulaire. La phosphorylation de l'acide amin\'e Tyrosine 11 (Y11) \`a son extr\'emit\'e carboxy-terminale (\gct) intrins\`equement d\'esordonn\'ee contr\^ole des aspects essentiels de l'€™assemblage du fuseau mitotique. La mutation de cette tyrosine \`a un acide aspartique phosphomim\'etique \vivo (Y11D) provoque une sensibilit\'e \`a la temp\'erature et des d\'efauts dans l'€™organisation des microtubules du fuseau mitotique. En utilisant des simulations informatiques de dynamique mol\'eculaire et la r\'esonance magn\'etique nucl\'eaire, nous montrons que les formes non-phosphomim\'etiques et phosphomim\'etiques du \gct balayent toutes deux principalement des conformations compactes et d\'esordonn\'ees, mais que la mutation Y11D entreprend des mouvements collectifs occasionnels vers une conformation mineure \'etendue, elle aussi d\'esordonn\'ee. Nous sugg\'erons que cette transition peut servir \`a contr\^oler la liaison avec les prot\'eines qui affectent la dynamique des microtubules. Il s'agit de la premi\`ere observation d'€™une transition organis\'ee dans un ensemble de structures d\'esordonn\'ees, un nouveau m\'ecanisme physique de contr\^ole ayant le potentiel de r\'eguler le fonctionnement cellulaire.}%
 
 \AbstractFr%
 
@@ -161,7 +161,7 @@
 \chapter{Conclusions}
 \input{conclusion.tex}
 
-\input{appendix.tex}
+%\input{appendix.tex}
 \bibHeading{References}
 \bibliography{thesis_cgo}
 \bibliographystyle{plain}
